feat: improve mic capture resilience and diarization stability

--- a/config.example.json
+++ b/config.example.json
@@ -5,6 +5,14 @@
   "sampleRate": 16000,
   "vadSilenceThreshold": 800,
   "vadThreshold": 0.5,
+  "vadInputTargetPeak": 0.12,
+  "vadInputMaxGain": 24,
+  "vadInputNoiseGateRms": 0,
+  "asrOverlapMs": 300,
+  "asrOverlapMaxGapMs": 600,
+  "asrTargetPeak": 0.65,
+  "asrMaxGain": 8,
+  "asrNoiseGateRms": 0,
   "vadModelPath": "./models/silero_vad.onnx",
   "speakerModelPath": "./models/3dspeaker_speech_eres2net_base_sv_zh-cn_3dspeaker_16k.onnx",
   "speakerThreshold": 0.25
